--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
 Source: vx-dconf-profile
 Section: gnome
-Priority: extra
+Priority: optional
 Maintainer: Jose Antonio Chavarría <jachavar@gmail.com>
-Build-Depends: debhelper (>= 8.0.0)
-Standards-Version: 3.9.3
+Build-Depends: debhelper (>= 11)
+Standards-Version: 4.1.4
 Homepage: https://github.com/vitalinux/vx-dconf-profile
 
 Package: vx-dconf-profile
 Architecture: all
-Depends: ${misc:Depends}, dconf-tools, dconf-service
-Description: dconf configuration system.
+Depends: ${misc:Depends}, dconf-cli, dconf-editor, dconf-service
+Description: DConf configuration system.
  It's prepared so that you can customize locally at the system level.
